# streams

./: README.md  TASKS.md  docker-compose.yml  pyproject.toml
migrations/: 001_init.sql
streams/: config.py  main.py
streams/api/: __init__.py  pages.py  rest.py  websocket.py
streams/models/: core.py
streams/services/: embeddings.py  epoch.py  link.py  qdrant.py  router.py
streams/storage/: event_bus.py  postgres.py
streams/templates/: base.html  chat.html  index.html
streams/worker/: link_worker.py
tests/: conftest.py  test_epoch.py  test_epoch_manager.py  test_link_service.py  test_startup.py  test_websocket.py
