[project]
name = "streams"
version = "0.1.0"
description = "Add your description here"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "asyncpg>=0.30.0",
    "attrs>=25.3.0",
    "chonkie[all]>=1.0.10",
    "fastapi>=0.115.13",
    "helix-py>=0.2.10",
    "numpy>=2.3.0",
    "openai>=1.90.0",
    "pydantic-settings>=2.10.0",
    "pyobjc>=11.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.14.3",
    "redis>=6.2.0",
    "rich>=14.0.0",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
test = ["pytest>=8.2", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
package-dir = { "streams" = "streams" }

[tool.pyright]
venvPath = ".venv"
venv = "."
reportMissingImports = true
reportSyntaxErrors = true
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = "none"
reportMissingModuleSource = true
reportGeneralTypeIssues = false
typeCheckingMode = "off"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
